B/bookstack-rB5dR6IepUp4arc/bookstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-bookstack
  labels:
    helm.sh/chart: bookstack-0.1.19
    app.kubernetes.io/name: bookstack
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.31.8
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bookstack
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-bookstack
  labels:
    helm.sh/chart: bookstack-0.1.19
    app.kubernetes.io/name: bookstack
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.31.8
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: bookstack
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bookstack
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
        - name: release-name-bookstack
          image: ghcr.io/linuxserver/bookstack:v0.31.8-ls126
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts: null
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-bookstack
  labels:
    helm.sh/chart: bookstack-0.1.19
    app.kubernetes.io/name: bookstack
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v0.31.8
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: bookstack.192.168.1.203.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-bookstack
                port:
                  number: 80
